@@ -1,4 +1,5 @@
 ======================
+    ADDED: mkdir (F7) can now create whole trees on the fly ("foo/bar/test")
     ADDED: synchronizer uses the search filters
     ADDED: search profiles
     ADDED: searcher: TC like search ( 'text' == '*text*' )
